--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
+<h1>Contact</h1>
+
+<div class="card text-white bg-secondary my-5 py-4 text-center">
+    <div class="card-body">
+        <img src="/assets/images/dog-paw-svgrepo-com.svg">
+        <p class="text-white m-0">Every dog requires a meet-and-greet session before we can go out walking! Please get in touch.</p>
+        <img src="/assets/images/SN-ems.jpg">
+    </div>
+</div>
 
 {% endblock %}
