--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,15 @@
     <!-- Heading Row-->
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
-                src="/assets/images/SN-banner.png" alt="A happy dog" /></div>
+                src="/static/node_modules/startbootstrap-small-business/dist/assets/SN-banner.png" alt="A happy dog" /></div>
         <div class="col-lg-5">
             <h1 class="font-weight-light">The Scallywags Nanny</h1>
-            <p>Dog-walking and pet-sitting in and around Bristol</p>
-            <p>Experienced, professional and passionate about dogs!</p>
-            <p>Please see the About page to learn about me and see reviews from happy customers, and photos of happy dogs!</p>
-            <p>If you have any questions at all, you are welcome to Contact me.</p>
-            <p>If you are registered as a client, you can book walks or pet-sits on the Services page.</p>
-            <a class="btn btn-primary" href="/templates/services.html">Learn more</a>
+            <p>Dog-walking and pet-sitting in and around Bristol.</p>
+            <p>Experienced, professional and passionate about dogs.</p>
+            <p>Please see the About page to learn about me and see reviews from happy customers, and photos of happy dogs.</p>
+            <p>If you have any questions at all, you are welcome to <a href=" {{ url_for('contact') }}">Contact me.</a></p>
+            <p>If you are registered as a client, you can book walks or pet-sits on the <a href=" {{ url_for('services') }} ">Services</a> page.</p>
+            <a class="btn btn-primary" href=" {{ url_for('services') }}">Learn more</a>
         </div>
     </div>
     <!-- Call to Action-->
@@ -30,7 +30,7 @@
                     <h2 class="card-title">About Me</h2>
                     <p class="card-text">My name is Emma, and here you can see more about me and the dogs I look after. This is the place for cute pictures!</p>
                 </div>
-                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">See More</a></div>
+                <div class="card-footer"><a class="btn btn-primary btn-sm" href=" {{ url_for('about') }}">See More</a></div>
             </div>
         </div>
         <div class="col-md-4 mb-5">
@@ -39,7 +39,7 @@
                     <h2 class="card-title">Contact</h2>
                     <p class="card-text">If you would like more information you can get in touch here. You can also see some of my social media updates and check out the areas me and my doggy friends spend our time having fun!</p>
                 </div>
-                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Contact</a></div>
+                <div class="card-footer"><a class="btn btn-primary btn-sm" href=" {{ url_for('contact') }}">Contact</a></div>
             </div>
         </div>
         <div class="col-md-4 mb-5">
@@ -48,7 +48,7 @@
                     <h2 class="card-title">Services</h2>
                     <p class="card-text">Book an initial meet-up here. Once registered as a client, you can update your details, book a walk or pet-sit or amend details.</p>
                 </div>
-                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Book here</a></div>
+                <div class="card-footer"><a class="btn btn-primary btn-sm" href=" {{ url_for('services') }}">Book here</a></div>
             </div>
         </div>
     </div>
