Updating favicon and navbar image in base

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
     <meta name="author" content="Kathryn Dawes" />
     <title>The Scallywags Nanny - Dog Walking & Pet Sitting Services</title>
     <!-- Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/node_modules/startbootstrap-small-business/dist/assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/node_modules/startbootstrap-small-business/dist/assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/node_modules/startbootstrap-small-business/dist/assets/favicons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/static/node_modules/startbootstrap-small-business/dist/css/styles.css" rel="stylesheet" />
@@ -20,7 +20,8 @@
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
-            <a class="navbar-brand" href="index.html">The Scallywags Nanny</a>
+            <img src="/static/node_modules/startbootstrap-small-business/dist/assets/favicons/favicon-32x32.png">
+            <a class="navbar-brand" href="index.html">   The Scallywags Nanny</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
