--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,9 +4,7 @@
 
 <div class="card text-white bg-secondary my-5 py-4 text-center">
     <div class="card-body">
-        <img src="/assets/images/dog-paw-svgrepo-com.svg">
-        <p class="text-white m-0">Every dog requires a meet-and-greet session before we can go out walking! Please get in touch.</p>
-        <img src="/assets/images/SN-ems.jpg">
+        <p class="text-white m-0">Every dog requires a meet-and-greet session before we can go out walking! Please get in touch via the form below.</p>
     </div>
 </div>
 
