--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('about')}}">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('contact')}}">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('services')}}">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('login')}}">Login</a></li>
                 </ul>
             </div>
         </div>
