Tidying login page appearance

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,15 @@
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-7">
             <!-- Login form -->
-             <h3>Log in below</h3>
+             <h3>Log in here</h3>
             <form>
                 <p>Username</p>
                 <p>Password</p>
             </form>
         </div>
         <div class="col-lg-5">
-            <h1 class="font-weight-light">Bookings</h1>
+            <!-- Login form information -->
+            <h3 class="font-weight-light">Bookings</h3>
             <p>If you are registered as a client, you can book walks or pet-sits by logging in here.</p>
             <p>If you are not yet registered, you can book a meet & greet session here. Once we have all met up to make sure your pet will be happy with me, I will set up a login for you. </p>
             <p>If you would like further services (e.g. house and pet-sitting), please contact me so we can discuss the details.</p>
