--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('index')}}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('about')}}">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('contact')}}">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('services')}}">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('login')}}">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ url_for('about')}}">About</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ url_for('contact')}}">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ url_for('services')}}">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ url_for('login')}}">Login</a></li>
                 </ul>
             </div>
         </div>
